[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/LC_Crimbus/pantry.png" type="Texture" id=1]
[ext_resource path="res://Levels/22.0 Crimbus/Arch.tscn" type="PackedScene" id=2]
[ext_resource path="res://BG.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/22.0 Crimbus/CookieRoom.gd" type="Script" id=6]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/LC_Crimbus/cookie_jar.png" type="Texture" id=8]
[ext_resource path="res://sprites/LC_Crimbus/cookiebot0.png" type="Texture" id=9]
[ext_resource path="res://sprites/LC_Crimbus/cookiebot2.png" type="Texture" id=10]
[ext_resource path="res://sprites/LC_Crimbus/cookiebot1.png" type="Texture" id=11]
[ext_resource path="res://sprites/LC_Crimbus/cookiebot3.png" type="Texture" id=12]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=13]
[ext_resource path="res://world/Sign.tscn" type="PackedScene" id=14]
[ext_resource path="res://Levels/22.0 Crimbus/cookieslam.gd" type="Script" id=15]
[ext_resource path="res://hitnhurtboxes/SeenBox.tscn" type="PackedScene" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "waiting",
"speed": 2.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "gotcookies",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 50.1415, 77.2452 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 112.148, 71.592 )

[sub_resource type="Animation" id=3]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/CookieBot/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "waiting" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cookie_jar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 159.739, -272.209 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cookie_jar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "fall"
length = 3.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("cookie_jar:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 159.739, -0.25, 0, 0.25, 0, 63.7612, -0.25, 0, 0.25, 0, 63.7612, -0.25, 0, 0.25, 0, -133.414, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 2.8, 3.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("cookie_jar:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -272.209, -0.25, 0, 0.25, 0, -272.209, -0.25, 0, 0.25, 0, 178.016, -0.25, 0, 0.21, -62.0401, 171.873, -0.29, -96.1873, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 2.8, 3.5 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("cookie_jar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/CookieBot/AnimatedSprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "waiting", "gotcookies" ]
}

[sub_resource type="Animation" id=5]
resource_name = "got_cookies"
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/CookieBot/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "gotcookies" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cookie_jar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="CookieRoom" type="Node2D"]
script = ExtResource( 6 )

[node name="BG" parent="." instance=ExtResource( 3 )]
margin_left = -1351.69
margin_top = -997.773
margin_right = 1470.31
margin_bottom = 1107.23

[node name="pantry" type="Sprite" parent="."]
position = Vector2( -6.03906, -55.6187 )
texture = ExtResource( 1 )

[node name="PuppyCamera" parent="." instance=ExtResource( 4 )]
position = Vector2( 12.5159, -70.1161 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -1256.6, -917.369 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1347.73, 909.732 )

[node name="BottomSP" parent="." instance=ExtResource( 5 )]
position = Vector2( -6.59912, 666.115 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 2.30878, 258.587 )
camera = NodePath("../../PuppyCamera")

[node name="Arch" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 4.62421, 757.819 )

[node name="CookieBot" type="Node2D" parent="YSort"]
position = Vector2( -134.902, 168.628 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="YSort/CookieBot"]
position = Vector2( -6.81143, -12.9714 )
frames = SubResource( 1 )
animation = "waiting"
playing = true
flip_h = true

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/CookieBot"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/CookieBot/StaticBody2D"]
polygon = PoolVector2Array( -50.1698, 25.9442, -9.9585, 57.0755, 63.9784, 50.5898, 13.39, 16.8642, -30.7128, 10.3785 )

[node name="SeenBox" parent="YSort/CookieBot" instance=ExtResource( 16 )]

[node name="CollisionShape2D" parent="YSort/CookieBot/SeenBox" index="0"]
position = Vector2( -20.8781, -20.8782 )
shape = SubResource( 6 )

[node name="Sign" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( -166.409, 594.816 )
text = "Did you know you can Turbo Dash using \"J\"?"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
script = ExtResource( 15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -1.91046, 0 )
polygon = PoolVector2Array( 235.098, 99.1328, -217.369, 93.8315, -178.931, -307.581 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
script = ExtResource( 15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D4"]
polygon = PoolVector2Array( -211.989, 88.3638, -217.456, 323.474, -583.942, -133.732 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
script = ExtResource( 15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
polygon = PoolVector2Array( 201.733, 99.2991, 199.911, 312.539, 734.253, -85.9713 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
position = Vector2( 1.82251, 0 )
polygon = PoolVector2Array( -228.392, 301.604, -89.877, 310.716, -187.258, 599.036, -95.3077, 775.027, -240.657, 757.138 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D5"]
polygon = PoolVector2Array( 243.652, 308.894, 83.2665, 310.716, 82.4493, 777.591 )

[node name="cookie_jar" type="Sprite" parent="."]
position = Vector2( 63.7612, 33.2965 )
texture = ExtResource( 8 )

[node name="TransitionZone" parent="." instance=ExtResource( 13 )]
position = Vector2( -6.45959, 818.219 )

[node name="CollisionShape2D" parent="TransitionZone" index="0"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 3 )
anims/fall = SubResource( 4 )
anims/got_cookies = SubResource( 5 )
[connection signal="seen" from="YSort/CookieBot/SeenBox" to="." method="_on_SeenBox_seen"]
[connection signal="slammed" from="StaticBody2D" to="." method="_on_StaticBody2D_slammed"]
[connection signal="slammed" from="StaticBody2D4" to="." method="_on_StaticBody2D_slammed"]
[connection signal="slammed" from="StaticBody2D2" to="." method="_on_StaticBody2D_slammed"]
[connection signal="transition_triggered" from="TransitionZone" to="." method="_on_TransitionZone_transition_triggered"]

[editable path="PuppyCamera"]

[editable path="YSort/CookieBot/SeenBox"]

[editable path="TransitionZone"]
